--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,14 @@
         font-family: "Urbanist", sans-serif;
       }
     </style>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+
     <title>edUFind</title>
   </head>
 
