--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,10 +8,7 @@
       content="Web site created using create-react-app"
     />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel&family=Urbanist:wght@200&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <style>
       * {
         margin: 0;
